# awesome-assistant

./: .gitignore  README.md  nginx.conf
backend/: .gitignore  Cargo.toml  README.md
backend/src/: auth.rs  main.rs
backend/src/conf/: init.toml.example  mod.rs
backend/src/storage/: cloudflare_s3.rs  mod.rs  redis_token_store.rs
frontend/: .env.development  .env.local.example  .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.prod.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/composables/: useAuth.js
frontend/src/types/: env.d.ts
frontend/src/utils/: environment.js  validateEnv.js
