[package]
name = "awesome-api-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
actix-cors = "0.6"
uuid = { version = "1.0", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
toml = "0.8"
aws-config = "1.1.7"
aws-sdk-s3 = "1.14.0"
aws-smithy-types = "1.1.7"
# Authentication and database dependencies
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
tokio-postgres = "0.7"
actix-web-httpauth = "0.8"
base64 = "0.21"